--- a/scripts/dashboard_templates/commodity_detail.html
+++ b/scripts/dashboard_templates/commodity_detail.html
@@ -15,9 +15,12 @@
     .row.one { grid-template-columns:1fr; }
     label { display:block; font-size:.82rem; color:var(--muted); margin-bottom:4px; }
     input, textarea, select { width:100%; padding:8px; border-radius:8px; border:1px solid #334155; background:#0b1323; color:var(--text); }
+    .input-error { border-color:#ef4444 !important; box-shadow: 0 0 0 1px #ef4444 inset; }
     textarea { min-height: 110px; resize: vertical; }
     button { padding:9px 12px; border:1px solid #334155; border-radius:8px; background:var(--btn); color:var(--text); cursor:pointer; }
     button:hover { background: var(--btnH); }
+    .danger-btn { background:#7f1d1d; border-color:#ef4444; color:#fee2e2; }
+    .danger-btn:hover { background:#991b1b; }
     .muted { color:var(--muted); font-size:.85rem; }
     .preview { width: 300px; height: 300px; max-width: 100%; border-radius: 10px; object-fit: cover; border: 1px solid #1f2937; background: #0b1323; display: block; }
     table { width:100%; border-collapse: collapse; }
@@ -49,6 +52,16 @@
       <div class="row">
         <div><label>Name</label><input id="name" /></div>
         <div><label>Price</label><input id="price" type="number" step="0.01" /></div>
+      </div>
+      <div class="row">
+        <div>
+          <label>Enabled In Shop</label>
+          <select id="enabled">
+            <option value="1">Enabled</option>
+            <option value="0">Disabled</option>
+          </select>
+        </div>
+        <div></div>
       </div>
       <div class="row">
         <div>
@@ -120,6 +133,10 @@
                 <option value="income">income</option>
                 <option value="trade_limits">trade_limits</option>
                 <option value="networth">networth</option>
+                <option value="commodities_limit">commodities_limit</option>
+                <option value="job_slots">job_slots</option>
+                <option value="timed_duration">timed_duration</option>
+                <option value="chance_roll_bonus">chance_roll_bonus</option>
               </select>
             </div>
             <div>
@@ -148,22 +165,41 @@
           </div>
         </div>
       </div>
-      <button id="saveBtn">Save</button>
+      <div style="display:flex; gap:8px; align-items:center; flex-wrap:wrap;">
+        <button id="saveBtn">Save</button>
+        <button id="deleteBtn" class="danger-btn" type="button">Delete Commodity</button>
+      </div>
       <div id="msg" class="muted" style="margin-top:8px;"></div>
     </div>
   </div>
   <script>
     const COMMODITY = {{ name|tojson }};
+    let CURRENT_COMMODITY = COMMODITY;
     const URL_AUTH_TOKEN = new URLSearchParams(window.location.search).get("token");
     const FALLBACK = "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='300'><rect width='100%' height='100%' fill='%230b1323'/><text x='50%' y='50%' fill='%2394a3b8' font-size='22' text-anchor='middle' dominant-baseline='middle'>No Img</text></svg>";
     let EFFECTS = [];
     let COMMODITY_NAMES = [];
     function el(id){ return document.getElementById(id); }
+    function clearValidation() {
+      document.querySelectorAll(".input-error").forEach((node) => node.classList.remove("input-error"));
+    }
+    function markInvalid(id) {
+      const node = el(id);
+      if (node) node.classList.add("input-error");
+    }
     function esc(s){ return String(s ?? "").replace(/[&<>"']/g, (ch) => ({ "&":"&amp;", "<":"&lt;", ">":"&gt;", '"':"&quot;", "'":"&#39;" }[ch])); }
     function withAuthToken(url) {
       if (!URL_AUTH_TOKEN) return url;
       const sep = url.includes("?") ? "&" : "?";
       return `${url}${sep}token=${encodeURIComponent(URL_AUTH_TOKEN)}`;
+    }
+    function commodityDetailUrl(name) {
+      const tab = String(new URLSearchParams(window.location.search).get("tab") || "").trim();
+      let url = `/commodity/${encodeURIComponent(name)}`;
+      if (tab) {
+        url += `?tab=${encodeURIComponent(tab)}`;
+      }
+      return withAuthToken(url);
     }
     function optionsForCommodityKey(selected) {
       if (!COMMODITY_NAMES.length) return '<option value="">(No commodities)</option>';
@@ -184,11 +220,11 @@
       }
       tbody.innerHTML = EFFECTS.map((eff, i) => `
         <tr data-eff-index="${i}">
-          <td><select data-eff-target="${i}"><option value="income"${eff.target_stat === "income" ? " selected" : ""}>income</option><option value="trade_limits"${eff.target_stat === "trade_limits" ? " selected" : ""}>trade_limits</option><option value="networth"${eff.target_stat === "networth" ? " selected" : ""}>networth</option></select></td>
+          <td><select data-eff-target="${i}"><option value="income"${eff.target_stat === "income" ? " selected" : ""}>income</option><option value="trade_limits"${eff.target_stat === "trade_limits" ? " selected" : ""}>trade_limits</option><option value="networth"${eff.target_stat === "networth" ? " selected" : ""}>networth</option><option value="commodities_limit"${eff.target_stat === "commodities_limit" ? " selected" : ""}>commodities_limit</option><option value="job_slots"${eff.target_stat === "job_slots" ? " selected" : ""}>job_slots</option><option value="timed_duration"${eff.target_stat === "timed_duration" ? " selected" : ""}>timed_duration</option><option value="chance_roll_bonus"${eff.target_stat === "chance_roll_bonus" ? " selected" : ""}>chance_roll_bonus</option></select></td>
           <td><select data-eff-mode="${i}"><option value="flat"${eff.value_mode === "flat" ? " selected" : ""}>flat</option><option value="multiplier"${eff.value_mode === "multiplier" ? " selected" : ""}>multiplier</option><option value="per_item"${eff.value_mode === "per_item" ? " selected" : ""}>per_item</option></select></td>
           <td><input data-eff-value="${i}" type="number" step="0.0001" value="${Number(eff.value || 0)}" /></td>
           <td><select data-eff-source="${i}"><option value="none"${String(eff.scale_source || "none") === "none" ? " selected" : ""}>none</option><option value="commodity_qty"${String(eff.scale_source || "none") === "commodity_qty" ? " selected" : ""}>commodity_qty</option></select></td>
-          <td><select data-eff-key="${i}">${optionsForCommodityKey(eff.scale_key || COMMODITY)}</select></td>
+          <td><select data-eff-key="${i}">${optionsForCommodityKey(eff.scale_key || CURRENT_COMMODITY)}</select></td>
           <td><input data-eff-scale-factor="${i}" type="number" step="0.0001" value="${Number(eff.scale_factor || 0)}" /></td>
           <td><input data-eff-cap="${i}" type="number" step="0.0001" value="${Number(eff.cap || 0)}" /></td>
           <td><button class="small-btn" data-del-eff="${i}" type="button">Delete</button></td>
@@ -215,7 +251,7 @@
         const mode = document.querySelector(`[data-eff-mode="${idx}"]`)?.value || "flat";
         const value = Number(document.querySelector(`[data-eff-value="${idx}"]`)?.value || 0);
         const source = document.querySelector(`[data-eff-source="${idx}"]`)?.value || "none";
-        const key = document.querySelector(`[data-eff-key="${idx}"]`)?.value || COMMODITY;
+        const key = document.querySelector(`[data-eff-key="${idx}"]`)?.value || CURRENT_COMMODITY;
         const scaleFactor = Number(document.querySelector(`[data-eff-scale-factor="${idx}"]`)?.value || 0);
         const cap = Number(document.querySelector(`[data-eff-cap="${idx}"]`)?.value || 0);
         next.push({
@@ -239,7 +275,7 @@
         .map((r) => String(r.name || "").trim())
         .filter(Boolean)
         .sort((a, b) => a.localeCompare(b));
-      el("new_eff_key").innerHTML = optionsForCommodityKey(COMMODITY);
+      el("new_eff_key").innerHTML = optionsForCommodityKey(CURRENT_COMMODITY);
     }
     function wireBackLink() {
       const back = el("backLink");
@@ -273,12 +309,14 @@
     }
     async function load() {
       await loadCommodityNames();
-      const res = await fetch(withAuthToken(`/api/commodity/${encodeURIComponent(COMMODITY)}`), { cache: "no-store" });
+      const res = await fetch(withAuthToken(`/api/commodity/${encodeURIComponent(CURRENT_COMMODITY)}`), { cache: "no-store" });
       if (!res.ok) return;
       const data = await res.json();
       const c = data.commodity;
+      CURRENT_COMMODITY = String(c.name || CURRENT_COMMODITY);
       el("name").value = c.name || "";
       el("price").value = Number(c.price).toFixed(2);
+      el("enabled").value = Number(c.enabled ?? 1) === 0 ? "0" : "1";
       el("rarity").value = c.rarity || "common";
       el("spawn_weight_override").value = Number(c.spawn_weight_override || 0).toFixed(4);
       el("image_url").value = c.image_url || "";
@@ -298,6 +336,19 @@
       renderOwners(Array.isArray(data.owners) ? data.owners : []);
     }
     async function save() {
+      clearValidation();
+      el("msg").textContent = "";
+      const nameRaw = String(el("name").value || "").trim();
+      const priceRaw = String(el("price").value || "").trim();
+      const rarityRaw = String(el("rarity").value || "").trim();
+      let invalid = false;
+      if (!nameRaw) { markInvalid("name"); invalid = true; }
+      if (!priceRaw || !Number.isFinite(Number(priceRaw))) { markInvalid("price"); invalid = true; }
+      if (!rarityRaw) { markInvalid("rarity"); invalid = true; }
+      if (invalid) {
+        el("msg").textContent = "Please fill all required fields before saving.";
+        return;
+      }
       collectEffectsFromDom();
       let perkEffectsJson = (el("perk_effects_json").value || "").trim();
       if (!perkEffectsJson) perkEffectsJson = "[]";
@@ -313,6 +364,7 @@
       const payload = {
         name: el("name").value,
         price: Number(el("price").value),
+        enabled: Number(el("enabled").value),
         rarity: el("rarity").value,
         spawn_weight_override: Number(el("spawn_weight_override").value),
         image_url: el("image_url").value,
@@ -323,18 +375,52 @@
         perk_min_qty: Number(el("perk_min_qty").value || 1),
         perk_effects_json: perkEffectsJson,
       };
-      const res = await fetch(withAuthToken(`/api/commodity/${encodeURIComponent(COMMODITY)}/update`), {
+      const res = await fetch(withAuthToken(`/api/commodity/${encodeURIComponent(CURRENT_COMMODITY)}/update`), {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(payload),
       });
       if (res.ok) {
+        const renamed = nameRaw.toLowerCase() !== String(CURRENT_COMMODITY || "").toLowerCase();
+        CURRENT_COMMODITY = nameRaw;
+        if (renamed) {
+          history.replaceState(null, "", commodityDetailUrl(CURRENT_COMMODITY));
+          wireBackLink();
+        }
         el("msg").textContent = "Saved.";
       } else {
         const err = await res.json().catch(()=>({error:"Failed"}));
         el("msg").textContent = err.error || "Save failed.";
       }
       await load();
+    }
+    async function removeCommodity() {
+      const name = String(CURRENT_COMMODITY || "").trim();
+      if (!name) {
+        el("msg").textContent = "No commodity selected.";
+        return;
+      }
+      if (!confirm(`Delete commodity \"${name}\"? This cannot be undone.`)) return;
+      const btn = el("deleteBtn");
+      const old = btn.textContent;
+      btn.disabled = true;
+      btn.textContent = "Deleting...";
+      try {
+        const res = await fetch(withAuthToken(`/api/commodity/${encodeURIComponent(name)}/delete`), {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+        });
+        if (!res.ok) {
+          const err = await res.json().catch(() => ({ error: "Delete failed." }));
+          el("msg").textContent = err.error || "Delete failed.";
+          return;
+        }
+        const target = withAuthToken("/?tab=commodities");
+        window.location.assign(target);
+      } finally {
+        btn.disabled = false;
+        btn.textContent = old;
+      }
     }
     el("addEffectBtn").addEventListener("click", () => {
       collectEffectsFromDom();
@@ -343,13 +429,14 @@
         value_mode: el("new_eff_mode").value,
         value: Number(el("new_eff_value").value || 0),
         scale_source: el("new_eff_source").value,
-        scale_key: el("new_eff_key").value || COMMODITY,
+        scale_key: el("new_eff_key").value || CURRENT_COMMODITY,
         scale_factor: Number(el("new_eff_scale_factor").value || 0),
         cap: Number(el("new_eff_cap").value || 0),
       });
       renderEffectsRows();
     });
     el("saveBtn").addEventListener("click", save);
+    el("deleteBtn").addEventListener("click", removeCommodity);
     el("image_url").addEventListener("input", syncPreview);
     wireBackLink();
     load();
