--- a/scripts/dashboard_templates/perk_detail.html
+++ b/scripts/dashboard_templates/perk_detail.html
@@ -15,6 +15,7 @@
     .row.one { grid-template-columns:1fr; }
     label { display:block; font-size:.82rem; color:var(--muted); margin-bottom:4px; }
     input, textarea, select { width:100%; padding:8px; border-radius:8px; border:1px solid #334155; background:#0b1323; color:var(--text); }
+    .input-error { border-color:#ef4444 !important; box-shadow: 0 0 0 1px #ef4444 inset; }
     textarea { min-height: 86px; resize: vertical; }
     button { padding:8px 11px; border:1px solid #334155; border-radius:8px; background:var(--btn); color:var(--text); cursor:pointer; }
     button:hover { background: var(--btnH); }
@@ -83,7 +84,7 @@
         <tbody id="effectRows"><tr><td colspan="9" class="muted">Loading...</td></tr></tbody>
       </table>
       <div class="row" style="margin-top:10px;">
-        <div><label>Target Stat</label><select id="new_eff_target"><option value="income">income</option><option value="trade_limits">trade_limits</option><option value="networth">networth</option></select></div>
+        <div><label>Target Stat</label><select id="new_eff_target"><option value="income">income</option><option value="trade_limits">trade_limits</option><option value="networth">networth</option><option value="commodities_limit">commodities_limit</option><option value="job_slots">job_slots</option><option value="timed_duration">timed_duration</option><option value="chance_roll_bonus">chance_roll_bonus</option></select></div>
         <div><label>Value Mode</label><select id="new_eff_mode"><option value="flat">flat</option><option value="multiplier">multiplier</option><option value="per_item">per_item</option></select></div>
       </div>
       <div class="row">
@@ -107,6 +108,13 @@
     let commodityNames = [];
     let commodityTags = [];
     function el(id){ return document.getElementById(id); }
+    function clearValidation() {
+      document.querySelectorAll(".input-error").forEach((node) => node.classList.remove("input-error"));
+    }
+    function markInvalid(id) {
+      const node = el(id);
+      if (node) node.classList.add("input-error");
+    }
     function esc(text) {
       return String(text).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
     }
@@ -266,8 +274,15 @@
       });
     }
     async function savePerk() {
+      clearValidation();
+      const nameRaw = String(el("name").value || "").trim();
+      if (!nameRaw) {
+        markInvalid("name");
+        el("msg").textContent = "Please fill all required fields before saving.";
+        return;
+      }
       const payload = {
-        name: el("name").value.trim(),
+        name: nameRaw,
         description: el("description").value,
         enabled: Number(el("enabled").value),
         priority: Number(el("priority").value),
