discord activity mvp

--- a/scripts/dashboard_templates/main.html
+++ b/scripts/dashboard_templates/main.html
@@ -119,7 +119,7 @@
           <button id="showActionHistory">Action History</button>
           <button id="showConfigs">App Configs</button>
           <button id="showServerSettings">Server Settings</button>
-          <a id="dbAccessBtn" class="btn" href="{{ db_access_url }}" target="_blank" rel="noopener">Open Database Access</a>
+          <a id="dbAccessBtn" class="btn" href="{{ db_access_entry_url or db_access_url }}" target="_blank" rel="noopener">Open Database Access</a>
         </div>
       </div>
     </div>
